experiments/logsICC/3964.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(78): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(81): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(84): error: schedule clause is incompatible with directive
            #pragma omp target teams distribute thread_limit(128) schedule(static, 1)
                                                                  ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(93): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(96): error: schedule clause is incompatible with directive
            #pragma omp target teams distribute thread_limit(128) schedule(static, 1)
                                                                  ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(105): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(108): error: schedule clause is incompatible with directive
  	#pragma omp target teams distribute thread_limit(128) schedule(static, 1)
  	                                                      ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c(117): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/3964.c (code 2)
